0.0.7_1 (2013-05-27)

    API Changes:
        - None.

    New Features:
        - New log_debug() method for SELECTing straight to Log::Any

    Enhancements:
        - Convert HASH arguments to functions as 'KEY = bv(VAL)'

    Bug Fixes:
        - None.

0.0.6 (2013-05-27)

    API Changes:
        - None.

    New Features:
        - Sub-query support via the sq() function
        - dump() and xdump() methods for debugging

    Enhancements:
        - Handle UNION [ALL] statements
        - Warn on unknown deployment file type

    Bug Fixes:
        - Only rollback if error doesn't occur on commit.
        - Skip tests in Deploy.t when no valid handles available

0.0.4 (2013-05-20)

    API Changes:
        - None.

    New Features:
        - None.

    Enhancements:
        - None.

    Bug Fixes:
        - Don't include a blib/ directory in the distribution.

0.0.2 (2013-04-06)

    Initial Release